---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 16. 03. 2019
  Info:
    - Add more optional dependencies and make all of them hidden
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 11. 03. 2019
  Info:
    - Add the logo as thumbnail.png
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 11. 03. 2019
  Info:
    - Change factorio version to 0.17
    - Add a sanity check for nil fluidboxes (will prevent a crash if another mod does this)
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 10. 09. 2018
  Bugfixes:
    - Correctly handle configuration changes
    - Handle force creation and merging
    - Fix type-o
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 29. 08. 2018
  Bugfixes:
    - Fix loading game for existing saves
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 29. 08. 2018
  Info:
    - Hide the recipes for permutation from the technology screen
    - Add more optional dependencies (MoreScience, MoreSciencePacks and Clowns-Science)
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 23. 08. 2018
  Info:
    - Added a changelog
    - Improved the recipe parsing slightly
    - Made compatible with Omnimatter (Still Omnimatter explicitly throws an error if Fluid Permutations is enabled, I can do nothing about that)
    - These changes are backward compatible